# whisper-transcription-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 64641fbec89f_create_transcription_jobs_table.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: health.py  transcriptions.py
app/api/v1/schemas/: transcription.py
app/core/: config.py
app/database/: session.py
app/database/models/: transcription_job.py
app/database/repositories/: transcription_job_repository.py
app/domain/transcription/: job.py  models.py
app/integrations/audio/: audio_downloader.py
app/integrations/webhook/: client.py
app/integrations/whisper/: transcriber.py
app/services/transcription/: job_service.py  metrics_logger.py  vtt_generator.py
app/workers/: celery_app.py  transcription_tasks.py
scripts/: check_database.py  transcribe_local.py  webhook_receiver.py
tests/integration/: conftest.py  test_transcription_api.py  test_transcription_job_repository.py  test_transcription_tasks.py
tests/integration/api/v1/: test_transcription_api.py
tests/integration/workers/: test_transcription_tasks.py
tests/unit/: test_audio_downloader.py  test_celery_app.py  test_metrics_logger.py  test_transcription_job.py  test_transcription_models.py  test_vtt_generator.py  test_whisper_transcriber.py
tests/unit/domain/transcription/: test_transcription_job.py
tests/unit/integrations/audio/: test_audio_downloader.py
tests/unit/integrations/webhook/: test_client.py
(+1 files in other folders)
